--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
     "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.6",
     "react-content-loader": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-fade-in": "^0.1.8",
@@ -41,9 +42,9 @@
     ]
   },
   "devDependencies": {
+    "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "react-loader-spinner": "^3.1.5"
+    "redux-thunk": "^2.3.0"
   }
 }
